--- a/leaguetoolbox/src/index.css
+++ b/leaguetoolbox/src/index.css
@@ -1,13 +1,92 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400&display=swap');
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
+    color: #C5C6C7;
+    font-family: 'Quicksand', sans-serif;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+  background-image: url('./img/Background.png');
 
+}
+#title{
+  color: #66FCF1;
+  font-family: 'Bebas Neue', cursive;
+  font-size: 5em;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App {
+  margin-left: 15em;
+  margin-right: 15em;
+}
+
+.outputChampList{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  gap: 2em;
+}
+
+.selected-champ{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  line-height: 2pt;
+}
+
+.select{
+  color:#C5C6C7;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 1.1em;
+  border-radius: 0.1em;
+  border-color: #45A29E;
+  background-color: #313131;
+
+}
+
+.selections{
+  display: flex;
+  gap: 2em;
+}
+
+.button{
+  color:#C5C6C7;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 1.1em;
+    border: solid;
+  border-radius: 0.1em;
+  border-color: #45A29E;
+  background-color: #313131;
+  margin-top: 1.5em;
+  padding: 1em;
+  text-decoration: none;
+  cursor: pointer;
+}
+.button:hover {background-color: #1b1b1b}
+.button:active {
+  background-color: #0e0e0e;
+  transform: translateY(1px);
+}
+.randomizer{
+  margin: 5em 5em;
+  border-width: 2em;
+  border-color: aliceblue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.loading{
+  margin-top: 3em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
