Fixed a paragraph display issue
disable the "The champion system picked for you is" when random champ not set

--- a/leaguetoolbox/src/index.css
+++ b/leaguetoolbox/src/index.css
@@ -76,13 +76,16 @@ code {
   transform: translateY(1px);
 }
 .randomizer{
-  margin: 5em 5em;
-  border-color: aliceblue;
+  margin: 3em 3em;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
+.pick-icon{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .loading{
   margin-top: 3em;
   display: flex;
